--- a/LI2/latex/interface_8h.tex
+++ b/LI2/latex/interface_8h.tex
@@ -36,43 +36,43 @@ Interpretador do jogo, todos os comandos sao efetuados nesta função.
 Usa a funcao \char`\"{}jogo\+\_\+terminado\char`\"{} para verificar se tem de continuar a pedir comandos. \end{quote}
 
 
-Definido na linha 51 do ficheiro interface.\+c.
+Definido na linha 33 do ficheiro interface.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{51                              \{}
-\DoxyCodeLine{52     \textcolor{keywordtype}{char} linha[BUF\_SIZE];}
-\DoxyCodeLine{53     \textcolor{keywordtype}{char} col[2], lin[2];}
-\DoxyCodeLine{54 }
-\DoxyCodeLine{56     \textcolor{keywordflow}{while} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 0) \{}
-\DoxyCodeLine{57         printf(\textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{58         \mbox{\hyperlink{interface_8h_aa0b6c1689e60ac852a73d67e066c1df5}{mostrar\_tabuleiro}}(e);}
-\DoxyCodeLine{59         \textcolor{keywordflow}{if} (fgets(linha, BUF\_SIZE, stdin) == NULL)}
-\DoxyCodeLine{60             \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{61         \textcolor{keywordflow}{else}}
-\DoxyCodeLine{62             \textcolor{keywordflow}{if} (strlen(linha) == 2 \&\& strncmp(linha, \textcolor{stringliteral}{"Q"}, 1) == 0) \{}
-\DoxyCodeLine{63                 printf(\textcolor{stringliteral}{"Saiu do jogo. \(\backslash\)n"});}
-\DoxyCodeLine{64                 \textcolor{keywordflow}{break};}
-\DoxyCodeLine{65             \}}
-\DoxyCodeLine{66             \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (strncmp(linha, \textcolor{stringliteral}{"gr"}, 2) == 0) \{}
-\DoxyCodeLine{67                 \mbox{\hyperlink{logica_8h_a1f170009451fe70e20c0d67e9918e2a0}{tabuleiro\_ficheiro}}(e, linha);}
-\DoxyCodeLine{68                 printf(\textcolor{stringliteral}{"Gravado.\(\backslash\)n"});}
-\DoxyCodeLine{69             \}}
-\DoxyCodeLine{70 }
-\DoxyCodeLine{71 }
-\DoxyCodeLine{72         \textcolor{keywordflow}{if} (strlen(linha) == 3 \&\& sscanf(linha, \textcolor{stringliteral}{"\%[a-\/h]\%[1-\/8]"}, col, lin) == 2) \{}
-\DoxyCodeLine{73             \mbox{\hyperlink{struct_c_o_o_r_d_e_n_a_d_a}{COORDENADA}} coord = \{*col -\/ \textcolor{charliteral}{'a'}, *lin -\/ \textcolor{charliteral}{'1'}\};}
-\DoxyCodeLine{74             \mbox{\hyperlink{logica_8h_ac313d7e553b1e2b5f266acb9bfff8141}{jogar}}(e, coord);}
-\DoxyCodeLine{75         \}}
-\DoxyCodeLine{76     \}}
-\DoxyCodeLine{77     \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 1)}
-\DoxyCodeLine{78         printf(\textcolor{stringliteral}{"Parabens!! O jogador 1 ganha!\(\backslash\)n"});}
-\DoxyCodeLine{79     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 2)}
-\DoxyCodeLine{80         printf(\textcolor{stringliteral}{"Parabens!! O jogador 2 ganha! \(\backslash\)n"});}
-\DoxyCodeLine{81     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 3)}
-\DoxyCodeLine{82         printf(\textcolor{stringliteral}{"Acabaram-\/se as jogadas! Ninguém ganhou. \(\backslash\)n"});}
-\DoxyCodeLine{83     \textcolor{keywordflow}{return} 1;}
-\DoxyCodeLine{84 \}}
+\DoxyCodeLine{33                              \{}
+\DoxyCodeLine{34     \textcolor{keywordtype}{char} linha[BUF\_SIZE];}
+\DoxyCodeLine{35     \textcolor{keywordtype}{char} col[2], lin[2];}
+\DoxyCodeLine{36 }
+\DoxyCodeLine{38     \textcolor{keywordflow}{while} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 0) \{}
+\DoxyCodeLine{39         printf(\textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{40         \mbox{\hyperlink{interface_8h_aa0b6c1689e60ac852a73d67e066c1df5}{mostrar\_tabuleiro}}(e);}
+\DoxyCodeLine{41         \textcolor{keywordflow}{if} (fgets(linha, BUF\_SIZE, stdin) == NULL)}
+\DoxyCodeLine{42             \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{43         \textcolor{keywordflow}{else}}
+\DoxyCodeLine{44             \textcolor{keywordflow}{if} (strlen(linha) == 2 \&\& strncmp(linha, \textcolor{stringliteral}{"Q"}, 1) == 0) \{}
+\DoxyCodeLine{45                 printf(\textcolor{stringliteral}{"Saiu do jogo. \(\backslash\)n"});}
+\DoxyCodeLine{46                 \textcolor{keywordflow}{break};}
+\DoxyCodeLine{47             \}}
+\DoxyCodeLine{48             \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (strncmp(linha, \textcolor{stringliteral}{"gr"}, 2) == 0) \{}
+\DoxyCodeLine{49                 \mbox{\hyperlink{logica_8h_a1f170009451fe70e20c0d67e9918e2a0}{tabuleiro\_ficheiro}}(e, linha);}
+\DoxyCodeLine{50                 printf(\textcolor{stringliteral}{"Gravado.\(\backslash\)n"});}
+\DoxyCodeLine{51             \}}
+\DoxyCodeLine{52 }
+\DoxyCodeLine{53 }
+\DoxyCodeLine{54         \textcolor{keywordflow}{if} (strlen(linha) == 3 \&\& sscanf(linha, \textcolor{stringliteral}{"\%[a-\/h]\%[1-\/8]"}, col, lin) == 2) \{}
+\DoxyCodeLine{55             \mbox{\hyperlink{struct_c_o_o_r_d_e_n_a_d_a}{COORDENADA}} coord = \{*col -\/ \textcolor{charliteral}{'a'}, *lin -\/ \textcolor{charliteral}{'1'}\};}
+\DoxyCodeLine{56             \mbox{\hyperlink{logica_8h_ac313d7e553b1e2b5f266acb9bfff8141}{jogar}}(e, coord);}
+\DoxyCodeLine{57         \}}
+\DoxyCodeLine{58     \}}
+\DoxyCodeLine{59     \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 1)}
+\DoxyCodeLine{60         printf(\textcolor{stringliteral}{"Parabens!! O jogador 1 ganha!\(\backslash\)n"});}
+\DoxyCodeLine{61     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 2)}
+\DoxyCodeLine{62         printf(\textcolor{stringliteral}{"Parabens!! O jogador 2 ganha! \(\backslash\)n"});}
+\DoxyCodeLine{63     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 3)}
+\DoxyCodeLine{64         printf(\textcolor{stringliteral}{"Acabaram-\/se as jogadas! Ninguém ganhou. \(\backslash\)n"});}
+\DoxyCodeLine{65     \textcolor{keywordflow}{return} 1;}
+\DoxyCodeLine{66 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{interface_8h_aa0b6c1689e60ac852a73d67e066c1df5}\label{interface_8h_aa0b6c1689e60ac852a73d67e066c1df5}} 
@@ -98,45 +98,27 @@ Definido na linha 7 do ficheiro interface.\+c.
 \begin{DoxyCode}{0}
 \DoxyCodeLine{7                                   \{}
 \DoxyCodeLine{8     \textcolor{keywordtype}{char} item;}
-\DoxyCodeLine{9 }
+\DoxyCodeLine{9     \textcolor{keywordtype}{int} num = 8;}
 \DoxyCodeLine{10 }
 \DoxyCodeLine{11     \textcolor{comment}{//Imprime as letras no topo do tabuleiro.}}
 \DoxyCodeLine{12     printf(\textcolor{stringliteral}{"   "});}
 \DoxyCodeLine{13     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{char} c = \textcolor{charliteral}{'a'}; c < \textcolor{charliteral}{'i'}; c++)}
 \DoxyCodeLine{14         printf(\textcolor{stringliteral}{"\%c  "}, c);}
 \DoxyCodeLine{15     printf(\textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{16 }
-\DoxyCodeLine{17     \textcolor{comment}{/*}}
-\DoxyCodeLine{18 \textcolor{comment}{    Imprime o conteudo do tabuleiro, imprimindo '*' no caso de a Peça ser "BRANCA",}}
-\DoxyCodeLine{19 \textcolor{comment}{    '\#' no caso de a peça ser "PRETA", e '.' no caso de ser "VAZIO".}}
-\DoxyCodeLine{20 \textcolor{comment}{    */}}
-\DoxyCodeLine{21 }
-\DoxyCodeLine{22     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < 8; i++) \{}
-\DoxyCodeLine{23         printf(\textcolor{stringliteral}{"\%d  "}, i+1);}
-\DoxyCodeLine{24         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} j = 0; j < 8; j++) \{}
-\DoxyCodeLine{25 }
-\DoxyCodeLine{26             \textcolor{keywordflow}{if} (i == 0 \&\& j == 7) \{}
-\DoxyCodeLine{27                 printf(\textcolor{stringliteral}{"2"});}
-\DoxyCodeLine{28                 \textcolor{keywordflow}{break};}
-\DoxyCodeLine{29             \}}
-\DoxyCodeLine{30             \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (i == 7 \&\& j == 0) \{}
-\DoxyCodeLine{31                 printf(\textcolor{stringliteral}{"1  "});}
-\DoxyCodeLine{32                 j++;}
-\DoxyCodeLine{33             \}}
-\DoxyCodeLine{34 }
-\DoxyCodeLine{35             \textcolor{keywordflow}{else} \{}
-\DoxyCodeLine{36                 \textcolor{keywordflow}{if} (\mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, i, j) == VAZIO)}
-\DoxyCodeLine{37                     item = \textcolor{charliteral}{'.'};}
-\DoxyCodeLine{38                 \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, i, j) == BRANCA)}
-\DoxyCodeLine{39                     item = \textcolor{charliteral}{'*'};}
-\DoxyCodeLine{40                 \textcolor{keywordflow}{else}}
-\DoxyCodeLine{41                     item = \textcolor{charliteral}{'\#'};}
-\DoxyCodeLine{42             \}}
-\DoxyCodeLine{43             printf(\textcolor{stringliteral}{"\%c  "}, item);}
-\DoxyCodeLine{44         \}}
-\DoxyCodeLine{45         printf(\textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{46     \}}
-\DoxyCodeLine{47     printf(\textcolor{stringliteral}{"\#(\%d) JOG: \%d => "}, e-\/>num\_jogadas+1, e-\/>jogador\_atual);}
-\DoxyCodeLine{48 \}}
+\DoxyCodeLine{16     \textcolor{comment}{/*}}
+\DoxyCodeLine{17 \textcolor{comment}{    Imprime o conteudo do tabuleiro, imprimindo '*' no caso de a Peça ser "BRANCA",}}
+\DoxyCodeLine{18 \textcolor{comment}{    '\#' no caso de a peça ser "PRETA", e '.' no caso de ser "VAZIO".}}
+\DoxyCodeLine{19 \textcolor{comment}{    */}}
+\DoxyCodeLine{20     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < 8; i++) \{}
+\DoxyCodeLine{21         printf(\textcolor{stringliteral}{"\%d  "}, num);}
+\DoxyCodeLine{22         num-\/-\/;}
+\DoxyCodeLine{23         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} j = 0; j < 8; j++) \{}
+\DoxyCodeLine{24             \textcolor{keywordtype}{char} peca = \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, i, j);}
+\DoxyCodeLine{25             printf(\textcolor{stringliteral}{"\%c  "}, peca);}
+\DoxyCodeLine{26         \}}
+\DoxyCodeLine{27         printf(\textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{28     \}}
+\DoxyCodeLine{29     printf(\textcolor{stringliteral}{"\#(\%d) JOG: \%d => "}, \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e) + 1, \mbox{\hyperlink{dados_8h_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e));}
+\DoxyCodeLine{30 \}}
 
 \end{DoxyCode}
